--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -457,3 +457,14 @@ footer .footer-below {
     display: none;
     opacity: 0;
 }
+
+/*Bill's Hacks*/
+
+.lead-image{
+    max-width: 30em;
+}
+
+.contact-buttons a{
+    color: #000000;
+    border: 1px solid #000000;
+}
