--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -472,3 +472,16 @@ footer .footer-below {
     color: #000000;
     border: 1px solid #000000;
 }
+
+.local {
+    padding: 3em 0em 3em 0em;
+}
+
+.speaker-tile {
+    background-color: #ECF0F1;
+    border: 5px solid;
+    border-color: #FFFFFF;
+    padding: 2em;
+    max-height: 450px;
+    overflow: auto;
+}
