--- a/partials/navigation.mustache
+++ b/partials/navigation.mustache
@@ -19,13 +19,13 @@
                     <a href="#page-top"></a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#portfolio">Locations</a>
+                    <a href="#portfolio">Schedule</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#about">About</a>
+                    <a href="#about">Register</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#contact">Contact</a>
+                    <a href="#contact">Speakers</a>
                 </li>
             </ul>
         </div>
