--- a/partials/speakers.mustache
+++ b/partials/speakers.mustache
@@ -1,4 +1,4 @@
-<div class='container local'>
+<div class='container local' id='speakers'>
     <div class="row">
         <div class="col-lg-12 text-center">
             <h1>Meet Our Speakers</h1>
