--- a/partials/registration.mustache
+++ b/partials/registration.mustache
@@ -1,5 +1,5 @@
 <section class="success" id="about">
-    <div class="container">
+    <div class="container local" id='register'>
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h1>Join On In</h1>
