--- a/partials/schedule.mustache
+++ b/partials/schedule.mustache
@@ -1,4 +1,4 @@
-<div class='container local'>
+<div id='schedule' class='container local'>
     <div class="row">
         <div class="col-lg-12 text-center">
             <h1>Schedule</h1>
