--- a/partials/speakers.mustache
+++ b/partials/speakers.mustache
@@ -1,16 +1,18 @@
-<div class='container local' id='speakers'>
-    <div class="row">
-        <div class="col-lg-12 text-center">
-            <h1>Meet Our Speakers</h1>
-            <hr class="star-primary">
-            {{#speakers}}
-                <div class='col-md-3 speaker-tile'>
-                    <img class='img-circle' src={{img}}></img>
-                    <h4>{{name}}</h4>
-                    <p>{{blurb}}</p>
-                </div>
-            {{/speakers}}
-        </div>
+<section id='speakers'>
+    <div class='container local' id='speakers'>
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h1>Meet Our Speakers</h1>
+                <hr class="star-primary">
+                {{#speakers}}
+                    <div class='col-md-3 speaker-tile'>
+                        <img class='img-circle' src={{img}}></img>
+                        <h4>{{name}}</h4>
+                        <p>{{blurb}}</p>
+                    </div>
+                {{/speakers}}
+            </div>
 
+        </div>
     </div>
-</div>
+</section>
