--- a/partials/navigation.mustache
+++ b/partials/navigation.mustache
@@ -19,13 +19,13 @@
                     <a href="#page-top"></a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#schedule">Schedule</a>
+                    <a href="#scheduleSection">Schedule</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#register">Register</a>
+                    <a href="#registerSection">Register</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#speakers">Speakers</a>
+                    <a href="#speakerSection">Speakers</a>
                 </li>
             </ul>
         </div>
