--- a/partials/registration.mustache
+++ b/partials/registration.mustache
@@ -1,5 +1,5 @@
-<section class="success" id="register">
-    <div class="container local">
+<section class="success" id="registerSection">
+    <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h1>Join On In</h1>
