--- a/partials/schedule.mustache
+++ b/partials/schedule.mustache
@@ -1,5 +1,5 @@
-<section id='schedule'>
-    <div class='container local'>
+<section id='scheduleSection'>
+    <div class='container'>
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h1>Schedule</h1>
