--- a/partials/speakers.mustache
+++ b/partials/speakers.mustache
@@ -1,5 +1,5 @@
-<section id='speakers'>
-    <div class='container local' id='speakers'>
+<section id='speakerSection'>
+    <div class='container'>
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h1>Meet Our Speakers</h1>
