--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -110,7 +110,7 @@ header .intro-text .skills {
 
 @media(min-width:768px) {
     header .container {
-        padding-top: 200px;
+        padding-top: 150px;
         padding-bottom: 100px;
     }
 
@@ -461,7 +461,7 @@ footer .footer-below {
 /*Bill's Hacks*/
 
 .lead-image{
-    max-width: 30em;
+    max-width: 50%;
 }
 
 .lead-image-local{
